test/invalid-syntax/54483_wildcard_in_expression/wildcard_in_expression.mag
-- Author: 54483, Pedro Barata

-- Syntax error: wildcard used in an expression (not a binding position)

fun main (_) : Unit -> Unit =
  print(2 * _)
